--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
+    "http-auth": "^4.2.0",
     "mongoose": "^8.2.2",
     "pug": "^3.0.2"
   },
